some little changes + round works